# peanut-butter

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  scanner.cpp  tests.sh
compiler/include/: bytecode.h  compiler.h  scanner.h  token.h  value.h
compiler/src/: bytecode.cpp  compiler.cpp  main.cpp  scanner.cpp  token.cpp  value.cpp
compiler/test/: bytecode_test.cc  compiler_test.cc  scanner_test.cc  value_test.cc
include/: compiler.h  scanner.h
src/: compiler.cpp  main.cpp  scanner.cpp  token.cpp
test/: compiler_test.cc  scanner_test.cc
vm/include/: scope.h  vm.h
vm/src/: main.cpp  scope.cpp  vm.cpp
vm/test/: scope_test.cc  vm_test.cc
